syntax = "proto3";

package rpc.user.v1;

option go_package = "github.com/yosuke7040/grpc-taskapp/backend/interfaces/rpc/user/v1;user_v1";

message User {
  string id = 1;
  string name = 2;
  string email = 3;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
  string token = 2;
}

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
}
